<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_speed"
        android:id="@+id/txt_speed"
        android:textSize="20sp"
        android:layout_above="@+id/speedknob"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/btn_connect"
        android:layout_toStartOf="@+id/btn_connect" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_direction"
        android:id="@+id/txt_direction"
        android:textSize="20sp"
        android:layout_above="@+id/show_direction_textView"
        android:layout_toRightOf="@+id/editText"
        android:layout_toEndOf="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:id="@+id/editText"
        android:clickable="false"
        android:textSize="20sp"
        android:focusable="false"
        android:height="300dp"
        android:layout_alignBottom="@+id/directionknob"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/show_speed_textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_connect"
        android:text="@string/btn_connect"
        android:layout_above="@+id/show_direction_textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        android:id="@+id/btn_send"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_disconnect"
        android:id="@+id/btn_disconnect"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.example.timmae.test.android.RotaryKnobView
        android:id="@+id/speedknob"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:angle="-90"
        android:layout_alignTop="@+id/show_speed_textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.example.timmae.test.android.RotaryKnobView
        android:id="@+id/directionknob"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:angle="0"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/show_speed_textView"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/speedknob" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/show_direction_textView"
        android:layout_alignTop="@+id/show_speed_textView"
        android:layout_toRightOf="@+id/btn_connect"
        android:layout_toEndOf="@+id/btn_connect" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose device"
        android:id="@+id/button_device"
        android:layout_above="@+id/devicetext"
        android:layout_alignLeft="@+id/btn_connect"
        android:layout_alignStart="@+id/btn_connect" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Chosen device:"
        android:id="@+id/devicetext"
        android:layout_below="@+id/btn_disconnect"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="None"
        android:id="@+id/device_chosen"
        android:layout_alignTop="@+id/devicetext"
        android:layout_toRightOf="@+id/speedknob"
        android:layout_toEndOf="@+id/speedknob" />

</RelativeLayout>
